name:                lmbd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mt-caret/lmbd
license:             BSD3
license-file:        LICENSE
author:              mt_caret
maintainer:          mtakeda.enigsol@gmail.com
copyright:           2017 mt-caret
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lmbd
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 6.0
